--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,9 +122,9 @@
         fab:menu_colorNormal="@color/colorPrimary"
         fab:menu_colorPressed="@color/colorPrimaryDark"
         fab:menu_fab_size="normal"
-        fab:menu_labels_showShadow="true"
+        fab:menu_labels_showShadow="false"
         fab:menu_labels_colorNormal="@android:color/transparent"
-        fab:menu_labels_textColor="@color/colorPrimary"
+        fab:menu_labels_textColor="@android:color/black"
         fab:menu_labels_cornerRadius="3dp"
         fab:menu_labels_ellipsize="none">
         <com.github.clans.fab.FloatingActionButton
@@ -138,5 +138,10 @@
             android:id="@+id/fab_menu_measure"
             fab:fab_label="Measure now"
             android:src="@drawable/ic_measure_white_24px"/>
+        <com.github.clans.fab.FloatingActionButton
+            style="@style/SubFabIcons"
+            android:id="@+id/fab_menu_btConnect"
+            fab:fab_label="Connect to device"
+            android:src="@drawable/ic_bluetooth_white_24px"/>
     </com.github.clans.fab.FloatingActionMenu>
 </android.support.design.widget.CoordinatorLayout>
