--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,4 +21,17 @@
         <item name="fab_colorNormal">@color/colorPrimaryDark</item>
 
     </style>
+
+    <style name="titleLabels">
+        <item name="android:textColor">@color/titleLabelColor</item>
+        <item name="android:textSize">@dimen/titleMeasureLabel</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+    </style>
+
+    <style name="measureValues">
+        <item name="android:textColor">@color/valueLabelColor</item>
+        <item name="android:textSize">@dimen/valueMeasureLabel</item>
+        <item name="android:fontFamily">sans-serif-black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
