--- a/app/src/main/res/layout/fragment_sample_details.xml
+++ b/app/src/main/res/layout/fragment_sample_details.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="280dp"
     android:id="@+id/sampleDetailsBottomSheet"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -16,11 +16,30 @@
             android:id="@+id/sampleDetailsQuitBtn"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/ic_clear_white_24px"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/titleSampleDetails"
+            android:text="@string/titleSampleDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="sans-serif-medium"
+            android:textColor="@color/floralWhite"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/sampleDetailsQuitBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/sampleDetailsQuitBtn"
+            app:layout_constraintTop_toTopOf="@+id/sampleDetailsQuitBtn"
+            tools:text="MEASURE DETAILS" />
 
         <ProgressBar
             android:id="@+id/pm10ProgressBarSampleDetails"
@@ -28,12 +47,12 @@
             android:layout_width="@dimen/progressBarSize"
             android:layout_height="@dimen/progressBarSize"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="4dp"
             android:max="1000"
             android:progress="120"
             android:progressDrawable="@drawable/circular_progressbar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/sampleDetailsQuitBtn" />
 
         <TextView
             android:id="@+id/pm10TitleLabelSampleDetails"
@@ -81,12 +100,12 @@
             android:layout_width="@dimen/progressBarSize"
             android:layout_height="@dimen/progressBarSize"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="0dp"
             android:max="1000"
             android:progress="250"
             android:progressDrawable="@drawable/circular_progressbar"
             app:layout_constraintStart_toEndOf="@+id/pm10ProgressBarSampleDetails"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/pm10ProgressBarSampleDetails" />
 
         <TextView
             android:id="@+id/pm25TitleLabelSampleDetails"
@@ -134,12 +153,12 @@
             android:layout_width="@dimen/progressBarSize"
             android:layout_height="@dimen/progressBarSize"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="0dp"
             android:max="1000"
             android:progress="850"
             android:progressDrawable="@drawable/circular_progressbar"
             app:layout_constraintStart_toEndOf="@+id/pm25ProgressBarSampleDetails"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/pm25ProgressBarSampleDetails" />
 
         <TextView
             android:id="@+id/no2TitleLabelSampleDetails"
@@ -271,6 +290,14 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
 
+        <View
+            android:id="@+id/completerView"
+            android:layout_width="wrap_content"
+            android:layout_height="25dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sampleDetailsTimeIcon" />
 
     </android.support.constraint.ConstraintLayout>
 
